# apache-airflow-providers-rabbitmq

./: README.md  RELEASE_NOTES.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
docs/: limitations.md  usage.md
docs/examples/: rabbitmq_dag.py
src/airflow/providers/rabbitmq/: version.py
src/airflow/providers/rabbitmq/hooks/: rabbitmq_hook.py
src/airflow/providers/rabbitmq/operators/: rabbitmq_producer.py
src/airflow/providers/rabbitmq/sensors/: rabbitmq_sensor.py
tests/integration/: test_rabbitmq_integration.py
tests/unit/hooks/: test_rabbitmq_hook.py
tests/unit/operators/: test_rabbitmq_producer.py
