[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apache-airflow-provider-rabbitmq"
version = "2.0.0"
description = "Airflow provider for RabbitMQ with sync/async messaging."
authors = [
    { name = "Mustafa Abuelfadl", email = "mustafa@zidan.me" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=2.8.0",
    "pika>=1.2.0",
    "aio-pika>=9.0.0",
]

[project.optional-dependencies]
development = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.25.3,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "testcontainers>=4.14.1",
    "pylint>=3.3.4,<4.0.0",
    "black>=25.1.0,<26.0.0",
    "flake8>=7.1.2,<8.0.0",
    "isort>=6.0.0,<7.0.0",
    "mypy>=1.15.0,<2.0.0",
    "tox>=4.44.0",
    "tox-uv>=1.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/airflow"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "src"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Ignore missing library stubs
[[tool.mypy.overrides]]
module = [
    "pika.*",
    "aio_pika.*",
    "airflow.*",
]
ignore_missing_imports = true
